# bikmetov_sh_t

./: CMakeLists.txt
prj.lab/: CMakeLists.txt
prj.lab/priority_queue/: priority_queue.cpp  priority_queue.h  priority_queue_test.cpp
prj.lab/queue_p/: CMakeLists.txt  c_queue_p.cpp  c_queue_p.h  priority_queue.cpp  priority_queue_test.cpp  queue_p.cpp  queue_p.h  queue_p_test.cpp
prj.lab/queue_r/: CMakeLists.txt  queue_r.cpp  queue_r.h  queue_r_test.cpp
